// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="{}"
  data-testid="default"
  id="default"
/>
`;

exports[`Render properties.html - value[0] 1`] = `
<div
  className="{}"
  data-testid="properties.html"
  id="properties.html"
/>
`;

exports[`Render properties.html is boolean false - value[0] 1`] = `
<div
  className="{}"
  data-testid="properties.html is boolean false"
  id="properties.html is boolean false"
/>
`;

exports[`Render properties.html is number 0 - value[0] 1`] = `
<div
  className="{}"
  data-testid="properties.html is number 0"
  id="properties.html is number 0"
/>
`;

exports[`Render properties.html-bad-code - value[0] 1`] = `
<div
  className="{}"
  data-testid="properties.html-bad-code"
  id="properties.html-bad-code"
/>
`;

exports[`Render properties.html-iframe - value[0] 1`] = `
<div
  className="{}"
  data-testid="properties.html-iframe"
  id="properties.html-iframe"
/>
`;

exports[`Render properties.html-styled - value[0] 1`] = `
<div
  className="{\\"style\\":{\\"background\\":\\"yellow\\",\\"padding\\":10}}"
  data-testid="properties.html-styled"
  id="properties.html-styled"
/>
`;

exports[`Render properties.style - value[0] 1`] = `
<div
  className="{\\"style\\":{\\"background\\":\\"yellow\\",\\"padding\\":10}}"
  data-testid="properties.style"
  id="properties.style"
/>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.html 1`] = `true`;

exports[`Test Schema properties.html 2`] = `null`;

exports[`Test Schema properties.html is boolean false 1`] = `false`;

exports[`Test Schema properties.html is boolean false 2`] = `
Array [
  Object {
    "dataPath": "/properties/html",
    "keyword": "type",
    "message": "should be string",
    "params": Object {
      "type": "string",
    },
    "schemaPath": "#/properties/properties/properties/html/type",
  },
]
`;

exports[`Test Schema properties.html is number 0 1`] = `false`;

exports[`Test Schema properties.html is number 0 2`] = `
Array [
  Object {
    "dataPath": "/properties/html",
    "keyword": "type",
    "message": "should be string",
    "params": Object {
      "type": "string",
    },
    "schemaPath": "#/properties/properties/properties/html/type",
  },
]
`;

exports[`Test Schema properties.html-bad-code 1`] = `true`;

exports[`Test Schema properties.html-bad-code 2`] = `null`;

exports[`Test Schema properties.html-iframe 1`] = `true`;

exports[`Test Schema properties.html-iframe 2`] = `null`;

exports[`Test Schema properties.html-styled 1`] = `true`;

exports[`Test Schema properties.html-styled 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
